# rustsync

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: drain.rs  error.rs  filter.rs  lib.rs  main.rs  source.rs  sync_info.rs  util.rs
src/local/: drain.rs  mod.rs  source.rs
tests/data/src/: lorem
